# Chess

./: .gitignore  StepsToInstallTensorflow  chess  compile  test.csv  test.pgn  websiteForRules
Chess/: CMakeLists.txt  main.cpp
Chess/AI/: alphaBeta.cpp  alphaBeta.h  evalMap.cpp  evalMap.h  nn.cpp  nn.h  random.cpp  random.h
Chess/Board/: board.cpp  board.h  elPassant.cpp  elPassant.h
Chess/Board/Moves/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
Chess/Controller/: RepresentationMap.cpp  RepresentationMap.h  chess.cpp  chess.h  controller.cpp  controller.h  move.cpp  move.h
Chess/GUI/: colors.cpp  colors.h  imageMap.cpp  imageMap.h  map.cpp  map.h  window.cpp  window.h
Model/: checkpoint  chess.data-00000-of-00001  chess.index
